--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Build and push API Docker image
       uses: docker/build-push-action@v5
       with:
-        context: ./apps/api
+        context: .
         file: ./apps/api/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
@@ -94,7 +94,7 @@ jobs:
     - name: Build and push Web Docker image
       uses: docker/build-push-action@v5
       with:
-        context: ./apps/web
+        context: .
         file: ./apps/web/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
