--- a/apps/web/.dockerignore
+++ b/apps/web/.dockerignore
@@ -19,7 +19,7 @@ coverage
 *.swp
 *.swo
 *~
-src/**/*.test.ts
-src/**/*.test.tsx
-src/**/*.spec.ts
-src/**/*.spec.tsx
+**/*.test.ts
+**/*.test.tsx
+**/*.spec.ts
+**/*.spec.tsx
