--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,58 @@
-version: '3.8'
-
 services:
-  api:
-    build:
-      context: ./apps/api
-      dockerfile: Dockerfile
+  nginx:
+    image: nginx:alpine
     ports:
-      - "3001:3001"
-    environment:
-      - NODE_ENV=production
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    restart: unless-stopped
-
-  web:
-    build:
-      context: ./apps/web
-      dockerfile: Dockerfile
-    ports:
-      - "3000:80"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./deploy/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
     depends_on:
       api:
         condition: service_healthy
+      web:
+        condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 10s
     restart: unless-stopped
+    networks:
+      - csmart-network
+
+  api:
+    image: ghcr.io/nguyendkn/turborepo/api:main-22673e5
+    expose:
+      - "3000"
+    environment:
+      - NODE_ENV=production
+      - PORT=3000
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 2
+      start_period: 60s
+    restart: unless-stopped
+    networks:
+      - csmart-network
+
+  web:
+    image: ghcr.io/nguyendkn/turborepo/web:main-22673e5
+    expose:
+      - "80"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1/"]
+      interval: 30s
+      timeout: 10s
+      retries: 2
+      start_period: 60s
+    restart: unless-stopped
+    networks:
+      - csmart-network
 
 networks:
-  default:
+  csmart-network:
     driver: bridge
