feat: implement user profile and management routes, services, and validation schemas
- Added profile routes for getting, updating, and managing user profiles.
- Implemented user management routes for creating, updating, and deleting users.
- Created authentication service for user login, registration, and password management.
- Developed profile service for handling user profile data and activities.
- Introduced user service for managing user data with pagination and filtering.
- Defined validation schemas using Zod for profile and user management.
- Established application types for user roles, JWT payloads, and API responses.
- Implemented logging and graceful shutdown utilities for better error handling and application stability.
- Added ESLint configuration for consistent code quality and style across the project.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,14 +1,94 @@
 {
-  "name": "api",
+  "name": "@csmart/api",
+  "version": "1.0.0",
+  "description": "CSmart API - Enterprise HonoJS application",
+  "main": "dist/index.js",
+  "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "bun": ">=1.0.0"
+  },
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --outdir ./dist --target bun",
-    "start": "bun run dist/index.js"
+    "dev:debug": "bun run --hot --inspect src/index.ts",
+    "build": "bun build src/index.ts --outdir ./dist --target bun --minify",
+    "build:node": "tsc && tsc-alias",
+    "start": "NODE_ENV=production bun run dist/index.js",
+    "start:node": "NODE_ENV=production node dist/index.js",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
+    "lint": "echo 'Linting is now handled at the root level. Run: pnpm lint from root.'",
+    "format": "echo 'Formatting is now handled at the root level. Run: pnpm format from root.'",
+    "type-check": "tsc --noEmit",
+    "check-types": "tsc --noEmit",
+    "clean": "rimraf dist coverage",
+    "docker:build": "docker build -t csmart-api .",
+    "docker:run": "docker run -p 3000:3000 csmart-api",
+    "db:migrate": "bun run src/scripts/migrate.ts",
+    "db:seed": "bun run src/scripts/seed.ts",
+    "docs:generate": "swagger-jsdoc -d src/docs/swagger.config.ts -o docs/api.json src/**/*.ts"
   },
   "dependencies": {
-    "hono": "^4.8.4"
+    "@hono/node-server": "^1.15.0",
+    "@hono/swagger-ui": "^0.4.1",
+    "@hono/zod-validator": "^0.2.2",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.6.1",
+    "drizzle-orm": "^0.29.5",
+    "helmet": "^7.2.0",
+    "hono": "^4.8.4",
+    "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.1",
+    "pg": "^8.16.3",
+    "rate-limiter-flexible": "^5.0.5",
+    "uuid": "^9.0.1",
+    "winston": "^3.17.0",
+    "zod": "^3.25.74"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/bun": "latest",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/ioredis": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.4",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.15.4",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^9.0.8",
+    "@vitest/coverage-v8": "^1.6.1",
+    "@vitest/ui": "^1.6.1",
+    "drizzle-kit": "^0.20.18",
+    "rimraf": "^5.0.10",
+    "supertest": "^6.3.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "vitest": "^1.6.1"
+  },
+  "keywords": [
+    "hono",
+    "typescript",
+    "api",
+    "enterprise",
+    "microservice"
+  ],
+  "author": "CSmart Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/csmart.git",
+    "directory": "apps/api"
   }
 }
