--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,108 +1,108 @@
 version: 2
 updates:
   # Enable version updates for npm (JavaScript/TypeScript packages)
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-      timezone: "Asia/Ho_Chi_Minh"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
+      timezone: 'Asia/Ho_Chi_Minh'
     # Group all updates into a single pull request to avoid spam
     groups:
       all-dependencies:
         patterns:
-          - "*"
+          - '*'
         update-types:
-          - "minor"
-          - "patch"
-          - "major"
+          - 'minor'
+          - 'patch'
+          - 'major'
     # Limit the number of open pull requests
     open-pull-requests-limit: 1
     # Auto-merge minor and patch updates
     allow:
-      - dependency-type: "direct"
-      - dependency-type: "indirect"
+      - dependency-type: 'direct'
+      - dependency-type: 'indirect'
     # Ignore specific packages if needed
     ignore:
       # Ignore major version updates for critical packages
-      - dependency-name: "react"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "react-dom"
-        update-types: ["version-update:semver-major"]
+      - dependency-name: 'react'
+        update-types: ['version-update:semver-major']
+      - dependency-name: 'react-dom'
+        update-types: ['version-update:semver-major']
     # Custom commit message
     commit-message:
-      prefix: "deps"
-      prefix-development: "deps-dev"
-      include: "scope"
+      prefix: 'deps'
+      prefix-development: 'deps-dev'
+      include: 'scope'
     # Add reviewers and assignees
     reviewers:
-      - "csmart-cloud"
+      - 'csmart-cloud'
     assignees:
-      - "csmart-cloud"
+      - 'csmart-cloud'
     # Add labels
     labels:
-      - "dependencies"
-      - "automated"
+      - 'dependencies'
+      - 'automated'
 
   # Enable version updates for Docker
-  - package-ecosystem: "docker"
-    directory: "/apps/api"
+  - package-ecosystem: 'docker'
+    directory: '/apps/api'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-      timezone: "Asia/Ho_Chi_Minh"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
+      timezone: 'Asia/Ho_Chi_Minh'
     groups:
       docker-dependencies:
         patterns:
-          - "*"
+          - '*'
     open-pull-requests-limit: 1
     commit-message:
-      prefix: "docker"
-      include: "scope"
+      prefix: 'docker'
+      include: 'scope'
     labels:
-      - "docker"
-      - "dependencies"
-      - "automated"
+      - 'docker'
+      - 'dependencies'
+      - 'automated'
 
-  - package-ecosystem: "docker"
-    directory: "/apps/web"
+  - package-ecosystem: 'docker'
+    directory: '/apps/web'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-      timezone: "Asia/Ho_Chi_Minh"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
+      timezone: 'Asia/Ho_Chi_Minh'
     groups:
       docker-dependencies:
         patterns:
-          - "*"
+          - '*'
     open-pull-requests-limit: 1
     commit-message:
-      prefix: "docker"
-      include: "scope"
+      prefix: 'docker'
+      include: 'scope'
     labels:
-      - "docker"
-      - "dependencies"
-      - "automated"
+      - 'docker'
+      - 'dependencies'
+      - 'automated'
 
   # Enable version updates for GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-      timezone: "Asia/Ho_Chi_Minh"
+      interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
+      timezone: 'Asia/Ho_Chi_Minh'
     groups:
       github-actions:
         patterns:
-          - "*"
+          - '*'
     open-pull-requests-limit: 1
     commit-message:
-      prefix: "ci"
-      include: "scope"
+      prefix: 'ci'
+      include: 'scope'
     labels:
-      - "github-actions"
-      - "dependencies"
-      - "automated"
+      - 'github-actions'
+      - 'dependencies'
+      - 'automated'
