--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,10 @@
     "start": "vite --port 3000",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "check-types": "tsc --noEmit",
+    "lint": "echo 'Linting is now handled at the root level. Run: pnpm lint from root.'",
+    "format": "echo 'Formatting is now handled at the root level. Run: pnpm format from root.'"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
