feat(routes): add authentication and authorization routes
- Implemented registration route for user sign-up.
- Added dashboard route with protected access.
- Created policies layout and detail routes for policy management.
- Introduced role management routes including create, edit, and detail views.
- Developed unauthorized access route for handling permission errors.
- Established user management routes with protected access for user actions.

feat(store): implement global state management

- Introduced application store for managing theme, notifications, and loading states.
- Created authentication store for handling user authentication state and actions.
- Added utility functions for store initialization and cleanup.

feat(types): define comprehensive type definitions

- Added API response types for standardized API interactions.
- Defined authentication types for user login, registration, and token management.
- Created types for roles, policies, permissions, and users to ensure type safety across the application.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,9 @@
     "docker:run": "docker run -p 3000:3000 csmart-api",
     "db:migrate": "bun run src/scripts/migrate.ts",
     "db:seed": "bun run src/scripts/seed.ts",
+    "db:seed-data": "bun run src/scripts/seed-data.ts",
+    "db:seed-data:reset": "bun run src/scripts/seed-data.ts --reset",
+    "db:seed-data:help": "bun run src/scripts/seed-data.ts --help",
     "docs:generate": "swagger-jsdoc -d src/docs/swagger.config.ts -o docs/api.json src/**/*.ts"
   },
   "dependencies": {
