feat: migrate from Drizzle ORM to Mongoose and improve type system
- Replace Drizzle ORM with Mongoose for MongoDB operations
- Create comprehensive MongoDB models with proper schemas and indexes
- Implement PBAC (Policy-Based Access Control) system with Mongoose
- Replace all 'unknown' types with specific TypeScript interfaces
- Add database-specific types for better type safety

Database Changes:
- Remove Drizzle ORM dependencies (drizzle-orm, drizzle-kit, pg)
- Add Mongoose ODM with proper connection management
- Create models: User, Profile, Role, Policy, ActivityLog, etc.
- Setup MongoDB indexes for optimal performance
- Add migration scripts for data seeding and index creation

Type System Improvements:
- Create types/database.ts with specific MongoDB operation types
- Add UserFilterParams, PolicyFilterConditions for type safety
- Replace Record<string, unknown> with proper interfaces:
  * UserPreferences for profile preferences
  * RoleMetadata for role metadata
  * ActivityLogMetadata for activity logs
  * PolicyConditions with specific attribute types
- Update all repositories and services to use specific types

PBAC System:
- Migrate role and policy services to Mongoose
- Maintain 100% API compatibility
- Preserve existing project structure and TypeScript interfaces
- Update permission evaluation system for MongoDB

Infrastructure:
- Add Docker Compose configuration for MongoDB
- Update environment configuration for MongoDB connection
- Create comprehensive README with setup instructions
- Add migration testing scripts

Breaking Changes: None (maintains full backward compatibility)

Closes: Migration from PostgreSQL/Drizzle to MongoDB/Mongoose

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -5,15 +5,14 @@ NODE_ENV=development
 PORT=3000
 HOST=localhost
 
-# Database Configuration
-DATABASE_URL=postgresql://postgres:password@localhost:5432/csmart
+# Database Configuration (MongoDB)
+DATABASE_URL=mongodb://localhost:27017/csmart
 # OR use individual settings:
 # DB_HOST=localhost
-# DB_PORT=5432
+# DB_PORT=27017
 # DB_NAME=csmart
-# DB_USER=postgres
-# DB_PASSWORD=password
-# DB_SSL=false
+# DB_USER=
+# DB_PASSWORD=
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
