--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,13 +42,12 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.29.5",
     "helmet": "^7.2.0",
     "hono": "^4.8.4",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.2",
     "nodemailer": "^6.10.1",
-    "pg": "^8.16.3",
     "rate-limiter-flexible": "^5.0.5",
     "uuid": "^9.0.1",
     "winston": "^3.17.0",
@@ -61,6 +60,7 @@
     "@types/cors": "^2.8.19",
     "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.19.4",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
@@ -70,7 +70,6 @@
     "@types/uuid": "^9.0.8",
     "@vitest/coverage-v8": "^1.6.1",
     "@vitest/ui": "^1.6.1",
-    "drizzle-kit": "^0.20.18",
     "rimraf": "^5.0.10",
     "supertest": "^6.3.4",
     "swagger-jsdoc": "^6.2.8",
