--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "format": "echo 'Formatting is now handled at the root level. Run: pnpm format from root.'"
   },
   "dependencies": {
+    "@repo/table": "workspace:^",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
