--- a/packages/table/tsconfig.json
+++ b/packages/table/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "jsx": "react-jsx",
-    "rootDir": "../",
+    "rootDir": "./src",
     "outDir": "dist",
     "noEmit": false,
     "declaration": true,
