feat: update debug configuration and fix public route authentication
- Update .vscode/launch.json to use nodemon with "npx nodemon" command
- Fix route-matcher.ts to strip API version prefix for public route matching
- Add removeApiVersionPrefix method to support future API version increases
- Update public route validation to work with /api/v1/* and future versions
- Configure MongoDB authentication with Docker Compose credentials
- Add authSource=admin parameter for proper MongoDB authentication
- Remove temporary debug endpoints from health routes

This ensures authentication middleware properly bypasses public routes
regardless of API version (v1, v2, etc.) and enables proper debugging
with nodemon while maintaining clean separation of concerns.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "dev:api": "turbo run dev --filter @csmart/api",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "lint:summary": "node scripts/lint-summary.js",
