--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,30 +2,20 @@
 NODE_ENV=development
 
 # Server Configuration
-PORT=3000
+PORT=3001
 HOST=localhost
 
-# Database Configuration (MongoDB)
-DATABASE_URL=mongodb://localhost:27017/csmart
-# OR use individual settings:
-# DB_HOST=localhost
-# DB_PORT=27017
-# DB_NAME=csmart
-# DB_USER=
-# DB_PASSWORD=
+# Database Configuration
+# MongoDB with Docker Compose authentication (with authSource)
+DATABASE_URI=mongodb://admin:EIRHYVAdViEpScjK@localhost:37077/turbo?authSource=admin
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379
-# OR use individual settings:
-# REDIS_HOST=localhost
-# REDIS_PORT=6379
-# REDIS_PASSWORD=
-# REDIS_DB=0
+REDIS_URL=redis://localhost:36379
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long
+JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long-for-development
 JWT_EXPIRES_IN=24h
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-at-least-32-characters-long
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-at-least-32-characters-long-for-development
 JWT_REFRESH_EXPIRES_IN=7d
 
 # CORS Configuration
