--- a/docker-compose.env.yml
+++ b/docker-compose.env.yml
@@ -1,12 +1,50 @@
+version: '3.8'
+
 services:
   redis:
-    image: redis
+    image: redis:latest
+    container_name: turbo-redis
     ports:
-      - '6379:6379'
+      - '36379:6379'
+    volumes:
+      - ./data/redis:/data
     restart: unless-stopped
+    command: redis-server --appendonly yes
     networks:
-      - csmart-network
+      - turbo-network
+
+  mongo:
+    image: mongo:latest
+    container_name: turbo-mongo
+    restart: unless-stopped
+    ports:
+      - "37077:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: EIRHYVAdViEpScjK
+      MONGO_INITDB_DATABASE: turbo
+    volumes:
+      - ./data/mongo:/data/db
+    networks:
+      - turbo-network
+
+  minio:
+    image: minio/minio:latest
+    container_name: turbo-minio
+    restart: unless-stopped
+    ports:
+      - "39000:9000"
+      - "39001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin123
+      MINIO_REGION: us-east-1
+    volumes:
+      - ./data/minio:/data
+    command: server /data --console-address ":9001"
+    networks:
+      - turbo-network
 
 networks:
-  csmart-network:
+  turbo-network:
     driver: bridge
