feat: implement file storage system with MinIO integration
- Add MinIO storage service with multipart upload support
- Implement File and MultipartUpload database models
- Add storage controller with upload/download endpoints
- Create file and multipart upload repositories
- Update API configuration for MinIO integration
- Add storage routes and type definitions
- Update docker-compose for MinIO service
- Remove deprecated schema files

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -48,3 +48,12 @@ BCRYPT_ROUNDS=12
 
 # API Documentation
 API_DOCS_ENABLED=true
+
+# MinIO Configuration
+MINIO_ENDPOINT=localhost
+MINIO_PORT=39000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin123
+MINIO_USE_SSL=false
+MINIO_REGION=us-east-1
+MINIO_DEFAULT_BUCKET=uploads
