--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,28 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
+      - DATABASE_URI=
+      - REDIS_URL=redis://redis:6379
+      - JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long
+      - JWT_EXPIRES_IN=24h
+      - JWT_REFRESH_SECRET=your-super-secret-refresh-key-at-least-32-characters-long
+      - JWT_REFRESH_EXPIRES_IN=7d
+      - CORS_ORIGINS=
+      - CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
+      - CORS_HEADERS=Content-Type,Authorization
+      - CORS_CREDENTIALS=true
+      - RATE_LIMIT_WINDOW_MS=900000
+      - RATE_LIMIT_MAX_REQUESTS=100
+      - SMTP_HOST=smtp.gmail.com
+      - SMTP_PORT=587
+      - SMTP_USER=your-email@gmail.com
+      - SMTP_PASSWORD=your-app-password
+      - SMTP_FROM=noreply@csmart.com
+      - MAX_FILE_SIZE=10485760
+      - UPLOAD_DIR=/uploads
+      - LOG_LEVEL=info
+      - LOG_FORMAT=json
+      - API_DOCS_ENABLED=false
     healthcheck:
       test:
         [
