fix: resolve health check authentication and bcrypt compatibility issues
- Fix /api/health endpoint authentication by configuring public routes
- Add health check routes to both /health and /api/health paths
- Remove debug logging from auth middleware and route matcher
- Address bcrypt compatibility issues with Bun runtime
- Update public routes configuration to support HEAD method for health checks
- Ensure health check endpoints bypass authentication middleware properly

This resolves the 401 authentication errors on health check endpoints
and improves compatibility with the Bun runtime environment.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -57,3 +57,10 @@ MINIO_SECRET_KEY=minioadmin123
 MINIO_USE_SSL=false
 MINIO_REGION=us-east-1
 MINIO_DEFAULT_BUCKET=uploads
+
+# Admin Seeding Configuration
+ADMIN_EMAIL=admin@csmart.com
+ADMIN_PASSWORD=Admin123!@#
+ADMIN_FIRST_NAME=System
+ADMIN_LAST_NAME=Administrator
+ENABLE_ADMIN_SEEDING=true
