--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
     "@hono/node-server": "^1.15.0",
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-validator": "^0.2.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
@@ -58,6 +59,7 @@
     "zod": "^3.25.74"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/bun": "latest",
     "@types/compression": "^1.8.1",
