feat: enhance permission system and improve code quality
- Refactor permission evaluator service with better error handling
- Improve policy engine service functionality
- Add dev:web development script for web app
- Fix ESLint import ordering in auth components
- Update turbo.json with enhanced configuration
- Standardize code formatting across API and web modules

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -59,7 +59,7 @@ MINIO_REGION=us-east-1
 MINIO_DEFAULT_BUCKET=uploads
 
 # Admin Seeding Configuration
-ADMIN_EMAIL=admin@csmart.com
+ADMIN_EMAIL=admin@csmart.cloud
 ADMIN_PASSWORD=Admin123!@#
 ADMIN_FIRST_NAME=System
 ADMIN_LAST_NAME=Administrator
