--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "dev:api": "turbo run dev --filter @csmart/api",
+    "dev:web": "turbo run dev --filter @csmart/web",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "lint:summary": "node scripts/lint-summary.js",
